--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body {
     background-attachment: fixed;
   }
 
+  .logoimg {
+    float: left;
+    width: 225px;
+    height: 50px;
+  }
+
   .student { 
     margin: 0;
     font-family: 'Segoe UI';
@@ -57,7 +63,7 @@ body {
   }
   
   .header a.active {
-    background-color: dodgerblue;
+    background-color: #383237;
     color: white;
   }
   
