--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
   filter: drop-shadow(6px 6px 6px #000102ab);
 }
 
+.w-50 {
+  width: 90%!important;
+}
+
 .logoimg {
   float: left;
   width: 225px;
@@ -116,7 +120,7 @@ anime {
 
 /* Animation */
 .anim-typewriter {
-  animation: typewriter 4s steps(44) 1s 1 normal both,
+  animation: typewriter 5s steps(44) 1s 1 normal both,
     blinkTextCursor 500ms steps(44) infinite normal;
 }
 @keyframes typewriter {
@@ -124,7 +128,7 @@ anime {
     width: 0;
   }
   to {
-    width: 9em;
+    width: 7.5em;
   }
 }
 @keyframes blinkTextCursor {
@@ -286,7 +290,12 @@ span {
   padding: 0 !important;
 }
 
-
+#btn-back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+}
 
 /* .change{
   -webkit-animation: colorchange 20s infinite;
@@ -325,5 +334,4 @@ span {
   100% {
     background: #fdbaba;
   }
-} 
-*/
+}*/
